Aug08: Finished! Hopefully

--- a/Sources.bib
+++ b/Sources.bib
@@ -101,3 +101,13 @@
   primaryClass  = {cs.CV},
   url           = {https://arxiv.org/abs/1512.03385}, 
 }
+
+
+@thesis{Yazykov,
+  author   = {Yazykov, Vladyslav},
+  title    = {Optimization of the ttH Selection Including Systematics Using Machine Learning with ATLAS Data},
+  school   = {Prague, Tech. U.},
+  year     = {2023},
+  url      = {https://cds.cern.ch/record/2871484},
+  note     = {Presented 05 Sep 2023},
+}
