--- a/res/Sections/AsymmPairProd.tex
+++ b/res/Sections/AsymmPairProd.tex
@@ -1,13 +1,13 @@
 \section{Asymmetric Pair Production}
     In a recent study~\cite{Dorsner_2023}, a novel method for pair producing LQ's that are not charge conjugates of each other, called ``asymmetric'' production, has been put forward, with the possibility that its cross sections are of similar or higher order than those of the conventional single and pair production methods mentioned in the previous section, for suitable masses and Yukawa coupling magnitudes. This novel method also comes with a few added benefits, such as the possibility for quark-quark initial states as opposed to quark-antiquark initial states, which is particularly preferrable for the LHC due to lessened PDF suppression.
 
-    The main requirements to initiate this pair production is that the two leptoquarks in the final state couple to a lepton of the same chirality and flavor, and that their fermion numbers differ. As an example, the $R_2$ LQ can couple to the left-handed $SU(2)$ quark doublets and the right-handed $SU(2)$ lepton singlets (and vice-versa), and the $S_1$ LQ, as mentioned before, can couple to the both the right-handed $SU(2)$ quark and lepton singlets. Because of the similar lepton coupling, we have the ability to asymmetrically produce an $R_2$ and an $S_1$ LQ in the final state from a quark-quark initial state, so long as the corresponding Yukawa coupling matrix elements are non-zero. The feynman diagram for an $S_1$/$R_2$ asymmetric production is given in Figure~\ref{s1r2FeynmanDiagram}.
+    The main requirements to initiate this pair production is that the two leptoquarks in the final state couple to a lepton of the same chirality and flavor, and that their fermion numbers differ. As an example, the $R_2$ LQ can couple to the left-handed $SU(2)$ quark doublets and the right-handed $SU(2)$ lepton singlets (and vice-versa), and the $S_1$ LQ, as mentioned before, can couple to both the right and left-handed $SU(2)$ quark and lepton singlets. Because of the similar lepton coupling, we have the ability to asymmetrically produce an $R_2$ and an $S_1$ LQ in the final state from a quark-quark initial state, so long as the corresponding Yukawa coupling matrix elements are non-zero. The (only) feynman diagram for the leading order contribution for an $S_1$/$R_2$ asymmetric production is given in Figure~\ref{s1r2FeynmanDiagram}.
 
     \input{./res/FeynmanDiagrams/s1r2FeynmanDiagram.tex}
 
     \subsection{The \texorpdfstring{$S_1$ and $R_2$}{S1 and R2} Case}
 
-        To examine further the $S_1$/$R_2$ scheme, we introduce the interaction terms of the Lagrangian for, say, coupling to right-handed leptons (which, again, excludes the neutrinos and leaves only the charged leptons):
+        To examine further the $S_1$/$R_2$ scheme, we will focus only on the scenarios in which the LQ's couple to a right-handed lepton. We ignore left-handed lepton couplings in order to eliminate the possibility for neutrinos in the final state, as they will not be in the analysis channel we will describe in a later section. The relevent interaction terms in the Lagrangian are therefore:
 
         \begin{equation}
             \mathcal{L}_{\text{int}} = Y_{1,ij}^{RR} \bar{u}_i^c \ell_j S_1^{\dagger} + Y_{2,ij}^{LR} \left(\bar{Q}_i^{\intercal} \ell_j R_2\right) + \text{h.c.}
@@ -19,18 +19,18 @@
             \mathcal{L}_{\text{int}} = Y_{1,ij}^{RR} \bar{u}^c_{R,i} e_{R,j} S_1^{\dagger} + Y_{2,ij}^{LR} \bar{u}_{L,j} e_{R,i}  (R_2^{+5/3})^* + (Y_2 V_{\dagger})_{ij}^{LR}\bar{d}_{L,j} e_{R,i}  (R_2^{+2/3})^*,
         \end{equation}
 
-        where now we have added chirality subscripts for the fermion states, LQ charges as superscripts which are in terms of the charge of the positron, and asterisks to represent charge conjugations of specific LQ eigenstates. Further, since the previous Lagrangian was in terms of the weak eigenstates of the fermions,\footnote{Ordinarliy, the weak eigenstates are denoted with primes, but for the purposes of this study where this difference is not relevant since we set the CKM matrix to the identity, we dropped the primes.} when we induce spontaneous symmetry breaking, we need to introduce the Cabbibo-Kobayashi-Maskawa (CKM) matrix to relate the weak eigenstates of the down-type quarks to their mass eigenstates. Fortunately for us, the contents of this matrix is not important for our study, so, for simplicity, we will take it to be the identity. We will make the additional assumptions for simplicity that not only is there mass degeneracy within LQ multiplets, but also among different multiplets; i.e. in every process, the LQ's will be assumed to have the same mass.\footnote{As will be mentioned later, will end indeed up considering asymmetric masses by requesting a few extra grid points with final state LQ's of different masses, but only for future supplementary study.}
+        where now we have added chirality subscripts for the fermion states, LQ charges as superscripts which are in terms of the charge of the positron, and asterisks to represent charge conjugations of specific LQ eigenstates. Further, since the previous Lagrangian was in terms of the weak eigenstates of the fermions,\footnote{Ordinarily, the weak eigenstates are denoted with primes, for instance, to indicate the difference between the weak and mass eigenstates. For the purposes of this study where this difference is not entirely important as well as for visual clarity, we chose to leave them out.} when we induce spontaneous symmetry breaking, we need to introduce the Cabbibo-Kobayashi-Maskawa (CKM) matrix to relate the weak eigenstates of the down-type quarks to their mass eigenstates. Fortunately for us, the contents of this matrix is not important for our study, so, for simplicity, we will take it to be the identity. We will make the additional assumptions for simplicity that not only is there mass degeneracy within LQ multiplets, but also among different multiplets; i.e. in every process, the LQ's will be assumed to have the same mass.\footnote{As will be mentioned later, will end indeed up considering asymmetric masses by requesting a few extra grid points with final state LQ's of different masses, but only for future supplementary study.}
 
 
 
-    \subsection{The \texorpdfstring{$2\ell\ell SS+1\tau$}{2llSS+1tau} Channel}
-        In the interest of analysis of this new pair production method, we need to pick a channel to study. Our group specializes in the $2\ell\ell SS+1\tau$ channel, which says that there are two same-sign leptons and one hadronically decaying tau in the final state. One way we can analyze this channel is to choose our Yukawa couplings such that the LQ's we pair produce both decay into heavy particles, like taus and top quarks. In order to achieve this, we would be looking at having
+    \subsection{The \texorpdfstring{$2\ell SS+1\tau$}{2lSS+1tau} Channel}
+        In the interest of analysis of this new pair production method, we need to pick a channel to study. Our group specializes in the $2\ell SS+1\tau$ channel, which says that there are two same-sign leptons and one hadronically decaying tau in the final state. One way we can analyze this channel is to choose our Yukawa couplings such that the LQ's we pair produce both decay into heavy particles, like taus and top quarks. In order to achieve this, we would be looking at having
         
         \begin{equation}
             Y^{XR}_{i3} \neq 0,\ \text{where}\ X=L,R\ \text{and}\ i=1,2,3.
         \end{equation}\label{yukawaMatrixElements}
 
-         This will allow the LQ to couple to only right-handed, third-generation leptons, so the tau. Since we also want a decay into a top quark, we need $Y^{XR}_{33} \neq 0$, but we will let the LQ couple to all quark generations to reduce PDF suppressions. Table~\ref{crossSections} contains the cross sections for various masses and Yukawa couplings, where the Yukawa magnitude of each matrix element is identical.\footnote{In principle, it is entirely possible to specify that the $Y^{XR}_{33}$ matrix element be greater than the others in order to isolate the decay $LQ \rightarrow t\tau$; this is something we delegate to a future study.}
+         This will allow the LQ to couple to only right-handed, third-generation leptons, which is only the tau. Since we also want a decay into a top quark, we need $Y^{XR}_{33} \neq 0$, but we will let the LQ couple to all quark generations to reduce PDF suppressions. Further study can be done to determine whether the reduced branching ratio $\beta(LQ \rightarrow t\tau)$ as a result of considering all quark generations out-weighs this reduced PDF suppresion benefit. Table~\ref{crossSections} contains the cross sections for various masses and Yukawa couplings, where the magnitude of each Yukawa coupling matrix element is identical. In principle, it is entirely possible to specify that the $Y^{XR}_{33}$ matrix element be greater than the others in order to isolate the decay $LQ \rightarrow t\tau$; this is something we also delegate to a future study.
 
         \renewcommand{\arraystretch}{1.15}
         \begin{table}[tbh]
@@ -54,7 +54,7 @@
 
         \input{./res/FeynmanDiagrams/mainAsymmProdContribution.tex}
         
-        The only way to asymmetrically pair-produce the $S_1$ and $R_2$ LQ's and have them decay into top quarks and taus is shown in Figure~\ref{mainAsymmProdContribution}, where we have two up-type quarks (which, in the standard 4 or 5-flavor schemes, means only the up and charm quarks) in the initial state which exchange a lepton in the t-channel to pair produce the LQ's of interest. The $S_1$ LQ will subsequently decay into a tau and a top quark and the $R_2$ LQ will subsequently decay into an anti-tau and a top quark.
+        The only way to asymmetrically pair-produce the $S_1$ and $R_2$ LQ's and have them decay into top quarks and taus is shown in Figure~\ref{mainAsymmProdContribution}. The $S_1$ LQ will subsequently decay into a tau and a top quark and the $R_2$ LQ will subsequently decay into an anti-tau and a top quark.
 
         One example decay chain for the taus and top quarks are:
 
