--- a/res/Sections/Introduction.tex
+++ b/res/Sections/Introduction.tex
@@ -20,7 +20,7 @@
     \end{table}
     \renewcommand{\arraystretch}{1}
 
-    LQ's are found as either vector or scalar particles; we will focus solely on the scalar LQ's, as the novel pair production method we will introduce in this report has not been studied for the vector LQ's. There are five multiplets with varying representations under the standard model gauge group $SU(3)_c \times SU(2)_L \times U(1)_Y$, as shown in Table~\ref{mulipletTable}. Notably, all five are triplets under $SU(3)_c$, which is expected, as they couple to a quark and must therefore carry color. This also means that it is possible for there to be quark-quark interactions with a LQ, however we will not consider this for a similar reason as to why we aren't considering vector LQ's. Each multiplet has a number of charged eigenstates; the $R_2$ leptoquark, for instance, has two charged eigenstates: $R_2^{+5/3}$ and $R_2^{+2/3}$. This comes from the Gell-Mann-Nishijima formula, in our normalization, given by:
+    LQ's are found as either vector or scalar particles; we will focus solely on the scalar LQ's, as the novel pair production method we will introduce in this report has not been studied for the vector LQ's. There are five multiplets with varying representations under the standard model gauge group $SU(3)_c \times SU(2)_L \times U(1)_Y$, as shown in Table~\ref{mulipletTable}. Notably, all five are triplets under $SU(3)_c$, which is expected, as they couple to a quark and must therefore carry color. This also means that it is possible for there to be quark-quark interactions with a LQ, however we will not consider this for a similar reason as to why we aren't considering vector LQ's. Each multiplet has a number of charged eigenstates; the $R_2$ leptoquark, for instance, has two charged eigenstates: $R_2^{+5/3}$ and $R_2^{+2/3}$. This comes from the LQ's representation under the $SU(2)_L$, along with, the Gell-Mann-Nishijima formula which, in our normalization, given by:
 
     \begin{equation}
         Q = I_3 + Y,
@@ -38,6 +38,8 @@
 
 
     \subsection{Conventional LQ Production}
+        We will briefly comment on the current conventional LQ production methods and give some brief phenomonolgical descriptions before we continue to describe the new asymmetric method. 
+        
         LQ production at the LHC consists of a number of different mechanisms, largely categorized as either pair production or single/resonant production. There are two main contributions to normal pair production, as shown in Figure~\ref{conventionalLQPairProdAtLO}. This involves a QCD-driven component, as well as a Yukawa-driven component in which a lepton is exchanged in the t-channel. Note that in both cases, the final state LQ's are charge conjugates of each other; in other words, an LQ and its anti-particle are produced. 
         %
         \input{./res/FeynmanDiagrams/conventionalLQPairProdAtLO.tex}
@@ -54,4 +56,4 @@
             \sigma_{\text{pair}} = f_{\text{QCD}}(m_{\text{LQ}}) + f_{\text{int}}(m_{\text{LQ}}) \abs{y_i}^2 + f_{\text{t-chan}}(m_{\text{LQ}}) \abs{y_i}^4. 
         \end{equation}
 
-        In this case, we have the first term arising due to the QCD component, in which there are no fermions and thus no Yukawa coupling dependence. The third term is due to the t-channel diagram as shown before, and therefore that term depends quartic-ly on the Yukawa coupling, and the middle term is the interference between the two. Evidently, this cross section becomes dominated by the QCD contribution for small magnitudes of the Yukawa coupling, but for larger couplings, the quartic term in the pair production cross-section can begin to dominate. However, the mass dependence also plays a larger part in the pair production terms, meaning that the cross section drops off faster for higher LQ masses when compared to single production, hence, in the higher mass regime, pair production no longer dominates.
+        In this case, we have the first term arising due to the QCD component, in which there are no fermions and thus no Yukawa coupling dependence. The third term is due to the t-channel diagram as shown before, and therefore that term depends quartic-ly on the Yukawa coupling, and the middle term is the interference between the two. Evidently, this cross section becomes dominated by the QCD contribution for small magnitudes of the Yukawa coupling, but for larger couplings, the quartic term in the pair production cross-section can begin to dominate. However, the mass dependence also plays a larger part in the pair production terms, meaning that the cross section drops off faster for higher LQ masses when compared to single production, hence, in the higher mass regime, pair production no longer dominates. 
