--- a/res/Sections/Test.tex
+++ b/res/Sections/Test.tex
@@ -31,3 +31,21 @@
         Totals & 8874951 & 32768 & 25955277 & 50648 \\ \hline
     \end{tabular}
 \end{table}
+
+
+
+\begin{table}[ht!]
+    \centering
+    \begin{tabular}{|c|c|c|c|c|}
+        \hline
+         & \multicolumn{2}{c|}{Non-weighted} & \multicolumn{2}{c|}{Weighted} \\ \hline 
+        Sample & Before Selection & After Selection & Before Selection & After Selection \\ \hline
+        $t\bar{t}H$ & 1015311 & 23037 & 785.2 & 17.8 \\ \hline
+        $t\bar{t}W$ & 902540 & 10759 & 2524.5 & 30.3 \\ \hline
+        $t\bar{t}Z(Z/\gamma*)$ & 2164697 & 14500 & 2116.6 & 14.0 \\ \hline
+        $t\bar{t}$ & 350927 & 457 & 47738.8 & 61.8 \\ \hline
+        $VV$ & 17373668 & 566 & 74970.7 & 1.3 \\ \hline
+        Others & 4148134 & 1329 & 508810.8 & 5.6 \\ \hline\hline
+        Totals & 25955277 & 50648 & 636946.6 & 130.7 \\ \hline
+    \end{tabular}
+\end{table}
