--- a/Report.tex
+++ b/Report.tex
@@ -8,7 +8,8 @@
 
 
 \begin{document}
-    \maketitle
+    \import{./res/Sections}{TitlePage.tex}
+    \pagebreak
     \tableofcontents
     \pagebreak
 
@@ -18,7 +19,7 @@
     \import{./res/Sections}{Methodology.tex}
     \import{./res/Sections}{Analysis.tex}
     \import{./res/Sections}{Discussion.tex}
-    \import{./res/Sections}{Acknowledgements.tex}
+    \import{./res/Sections}{Acknowledgement.tex}
 
 
     \pagebreak
