--- a/res/Sections/Analysis/Analysis_LQ.tex
+++ b/res/Sections/Analysis/Analysis_LQ.tex
@@ -1,4 +1,2 @@
 \subsection{LQ Analysis}
-    Unfortunately, the requested LQ samples were not completed in time for an analysis to be run on them. The formalities associated with gaining approval from the various convening groups as well as the requesting process, coupled with communication issues among some colleagues made the process take a bit longer than expected.
-
-    Despite this, it was still very much worthwhile to spend the time porting the Rel.21 analysis code into Rel.22 and testing it on the existing $t\bar{t}H$ samples. This process, as has been mentioned numerous times so far, involved a lot of trial and error regarding the missing branches and other general changes between releases. We also found that even with a simple neural network, we were able to get some relatively good results, which bode well both for the quality of Rel.22 samples but also for the future analysis of the LQ samples.
+    Unfortunately, the requested LQ samples were not completed in time for an analysis to be run on them. The formalities associated with gaining approval from the various convening groups as well as the requesting process took up far more time than was initially expected. Further, I had to learn all about the theory behind LQ's and how to operate the Athena software. Despite this, it was still very much worthwhile to spend the time porting the Rel.21 $2\ell SS + 1\tau$ analysis code into Rel.22 and testing it on the existing $t\bar{t}H$ samples. We found that even with a simple neural network, we were able to get some relatively good results, which bode well both for the quality of Rel.22 samples but also for the future analysis of the LQ samples.
